--- a/app/src/main/res/layout/activity_compartir.xml
+++ b/app/src/main/res/layout/activity_compartir.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textColor="@color/gray"
-            android:textColorHint="@color/gray"
+            android:textColorHint="@color/b2"
             android:hint="Para"
             android:textSize="25dp"
             android:paddingLeft="20dp"
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textColor="@color/gray"
-            android:textColorHint="@color/gray"
+            android:textColorHint="@color/b2"
             android:hint="CC"
             android:textSize="25dp"
             android:paddingLeft="20dp"
@@ -63,7 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textColor="@color/gray"
-            android:textColorHint="@color/gray"
+            android:textColorHint="@color/b2"
             android:hint="Asunto"
             android:textSize="25dp"
             android:paddingLeft="20dp"
@@ -75,7 +75,7 @@
             android:layout_marginTop="20dp"
             android:hint="Descripcion"
             android:textColor="@color/gray"
-            android:textColorHint="@color/gray"
+            android:textColorHint="@color/b2"
             android:textSize="25dp"
             android:paddingLeft="20dp"
             android:fontFamily="@font/medium"/>
