--- a/app/src/main/res/layout/activity_agregar.xml
+++ b/app/src/main/res/layout/activity_agregar.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textColor="@color/gray"
-        android:textColorHint="@color/gray"
+        android:textColorHint="@color/b2"
         android:hint="Codigo"
         android:textSize="25dp"
         android:paddingLeft="20dp"
@@ -53,7 +53,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:textColor="@color/gray"
-        android:textColorHint="@color/gray"
+        android:textColorHint="@color/b2"
         android:hint="Nombre"
         android:textSize="25dp"
         android:paddingLeft="20dp"
